linuxmuster-linbo7 (4.0.10-0) lmn71-testing; urgency=low

  * Fix #56: Gui will not be downloaded after cache partition was formatted.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 23 Feb 2022 10:50:00 +0100

linuxmuster-linbo7 (4.0.9-0) lmn71-testing; urgency=low

  * Fix #52: linbo_cmd: add minus in regex for group name check.
  * Fix #53: fix parts of the patch_registry script, use chntpw forked by SlrG (see #50).
  * Fix #54: linbo-remote: allow to use -n without -c or -p.
  * Fix #55: linbo-remote: readded multischool support.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 22 Feb 2022 19:53:00 +0100

linuxmuster-linbo7 (4.0.8-0) lmn71; urgency=low

  * Fix #49: Group specific start.conf is not downloaded on linbo client with capitalized name.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 28 Jan 2022 15:53:59 +0000

linuxmuster-linbo7 (4.0.7-0) lmn71; urgency=low

  * Fix #48: syntax error in hostname and mac address queries.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 18 Jan 2022 12:34:00 +0100

linuxmuster-linbo7 (4.0.6-0) lmn71; urgency=low

  * Fix #44: Hyphen in hostname prevents loading the correct start.conf.
  * Fix #46: Windows BSOD after image sync to nvme partition.
  * Fix #47: get host data from ad instead of devices.csv.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 14 Jan 2022 17:04:18 +0000

linuxmuster-linbo7 (4.0.5-0) lmn71; urgency=low

  * kernel 5.10.89.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 4 Jan 2021 17:16:00 +0100

linuxmuster-linbo7 (4.0.4-0) lmn71; urgency=low

  * Fix #40: linbo_gui not downloaded on unregistered clients.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 28 Dec 2021 20:19:00 +0100

linuxmuster-linbo7 (4.0.3-0) lmn71; urgency=low

  * Fix #32: Add global.reg to linuxmuster-win.
  * Fix #33: /dev/nbd0 disconnected Report.
  * Fix #34: fullsync with ext4 Filesystems changed behavior.
  * Fix #35: Change ntpd Parameter.
  * Fix #36: Use qcow2 in examples.